<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_of_title"
        />
	
	<EditText
	    android:id="@+id/value_of_shell_command"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/hint_of_shell_command"
	    android:textColorHint="#ffff00"
	    />
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button 
	        android:id="@+id/button_of_exec_shell"
	   		android:layout_alignParentLeft="true"
	   		android:layout_width="wrap_content"
	   		android:layout_height="wrap_content"
	   		android:text="@string/button_name_of_exec_shell"
	        />
	</RelativeLayout>
	<ScrollView 
	    android:layout_width="fill_parent"
	    android:layout_height="350dp"
	    >
	    <EditText 
		    android:id="@+id/result_of_shell_command"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:editable="false"
	    />
	</ScrollView>
</LinearLayout>
