<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingTop="50dp" >
    
	<TextView 
	    android:id="@+id/general_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView 
	    android:id="@+id/accuracy_info"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:id="@+id/value_0"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:id="@+id/value_1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<TextView
	    android:id="@+id/value_2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    />
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    >
	    <Button 
		    android:id="@+id/change_delay_fastest"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_name_of_change_delay_fastest"
		    android:layout_alignParentLeft="true"
		    android:paddingRight="25dp"
	    />
	    <Button 
		    android:id="@+id/change_delay_game"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_name_of_change_delay_game"
		    android:layout_toRightOf="@+id/change_delay_fastest"
		    android:paddingRight="25dp"
	    />
	    <Button 
		    android:id="@+id/change_delay_nomal"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_name_of_change_delay_nomal"
		    android:layout_toRightOf="@+id/change_delay_game"
		    android:paddingRight="25dp"
	    />
	    <Button 
		    android:id="@+id/change_delay_ui"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_name_of_change_delay_ui"
		    android:layout_toRightOf="@+id/change_delay_nomal"
	    />
	</RelativeLayout>
</LinearLayout>
